# Supermarket

./: .gitignore  ARCHITECTURE.md  ARCHITECTURE_DIAGRAMS.md  BUILD_AND_RUN.md  CLASS_REFERENCE.md  CMakeLists.txt  COMPLETION_REPORT.md  DEVELOPMENT.md  IMPLEMENTATION_SUMMARY.md  QUICK_REFERENCE.md  README.md
.github/: copilot-instructions.md
build_mingw/: .ninja_deps  .ninja_log  CTestTestfile.cmake  build.ninja  cmake_log.txt
build_mingw/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake  supermarket_qt_qml.cmake  supermarket_qt_res.cmake
build_mingw/.qt/rcc/: qmake_Supermarket.qrc  supermarket_qt_raw_qml_0_extra_qmldirs.qrc
build_mingw/.rcc/qmlcache/: all_aotstats.aotstatslist  module_supermarket_qt.aotstatslist  supermarket_qt_qml_loader_file_list.rsp
build_mingw/.rcc/qmllint/: supermarket_qt.rsp  supermarket_qt_json.rsp  supermarket_qt_module.rsp
build_mingw/Supermarket/: qmldir  supermarket_qt_qml_module_dir_map.qrc
build_mingw/qmltypes/: supermarket_qt_foreign_types.txt
build_mingw_clean/: CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  build.ninja
build_mingw_clean/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake  supermarket_qt_qml.cmake  supermarket_qt_res.cmake
build_mingw_clean/.qt/rcc/: qmake_Supermarket.qrc
build_mingw_clean/.rcc/qmlcache/: all_aotstats.aotstatslist  module_supermarket_qt.aotstatslist  supermarket_qt_qml_loader_file_list.rsp
build_mingw_clean/.rcc/qmllint/: supermarket_qt.rsp  supermarket_qt_json.rsp  supermarket_qt_module.rsp
build_mingw_clean/Supermarket/: supermarket_qt_qml_module_dir_map.qrc
build_mingw_qt/: CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  build.ninja
build_mingw_qt/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake  supermarket_qt_qml.cmake  supermarket_qt_res.cmake
build_mingw_qt/.qt/rcc/: qmake_Supermarket.qrc  supermarket_qt_raw_qml_0.qrc
build_mingw_qt/.rcc/qmlcache/: all_aotstats.aotstatslist  module_supermarket_qt.aotstatslist  supermarket_qt_qml_loader_file_list.rsp
build_mingw_qt/.rcc/qmllint/: supermarket_qt.rsp  supermarket_qt_json.rsp  supermarket_qt_module.rsp
build_mingw_qt/Supermarket/: qmldir  supermarket_qt_qml_module_dir_map.qrc
build_ninja/: .ninja_deps  .ninja_log  CTestTestfile.cmake  build.ninja  test_supermarket.db
build_ninja/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake  supermarket_qt_qml.cmake  supermarket_qt_res.cmake
build_ninja/.qt/rcc/: qmake_Supermarket.qrc  supermarket_qt_raw_qml_0.qrc  supermarket_qt_raw_qml_0_extra_qmldirs.qrc
build_ninja/.rcc/qmlcache/: all_aotstats.aotstatslist  module_supermarket_qt.aotstatslist  supermarket_qt_qml_loader_file_list.rsp
build_ninja/.rcc/qmllint/: supermarket_qt.rsp  supermarket_qt_json.rsp  supermarket_qt_module.rsp
build_ninja/Supermarket/: supermarket_qt_qml_module_dir_map.qrc
build_ninja/supermarket_tests_autogen/: deps  moc_predefs.h
build_qml/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  SupermarketHeroSystem.slnx  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  all_aotstats.vcxproj  all_aotstats.vcxproj.filters  all_qmllint.vcxproj  all_qmllint.vcxproj.filters  all_qmllint_json.vcxproj  all_qmllint_json.vcxproj.filters  all_qmllint_module.vcxproj  all_qmllint_module.vcxproj.filters  all_qmltyperegistrations.vcxproj  generate_qmlls_build_ini_file.vcxproj  generate_qmlls_build_ini_file.vcxproj.filters  module_supermarket_qt_aotstats_target.vcxproj  module_supermarket_qt_aotstats_target.vcxproj.filters  supermarket_backend.vcxproj  supermarket_backend.vcxproj.filters  supermarket_qt.vcxproj  supermarket_qt.vcxproj.filters  supermarket_qt_autogen.vcxproj  supermarket_qt_autogen.vcxproj.filters  supermarket_qt_automoc_json_extraction.vcxproj  supermarket_qt_automoc_json_extraction.vcxproj.filters  supermarket_qt_copy_qml.vcxproj  supermarket_qt_copy_qml.vcxproj.filters  supermarket_qt_copy_res.vcxproj  supermarket_qt_copy_res.vcxproj.filters  supermarket_qt_other_files.vcxproj  (+12 more)
build_qml/.qt/: .qmlls.build.ini  QtDeploySupport-Debug.cmake  QtDeploySupport-MinSizeRel.cmake  QtDeploySupport-RelWithDebInfo.cmake  QtDeploySupport-Release.cmake  QtDeployTargets-Debug.cmake  QtDeployTargets-MinSizeRel.cmake  QtDeployTargets-RelWithDebInfo.cmake  QtDeployTargets-Release.cmake  supermarket_qt_qml.cmake  supermarket_qt_res.cmake
build_qml/.qt/rcc/: qmake_Supermarket.qrc
build_qml/.rcc/qmlcache/: all_aotstats.aotstatslist  module_supermarket_qt.aotstatslist  supermarket_qt_qml_loader_file_list.rsp  supermarket_qt_qmlcache_loader.cpp
build_qml/.rcc/qmllint/: supermarket_qt.rsp  supermarket_qt_json.rsp  supermarket_qt_module.rsp
build_qml/Supermarket/: supermarket_qt_qml_module_dir_map.qrc
build_qml/lib/Debug/: supermarket_qt.exp
build_qml/supermarket_backend.dir/Debug/: supermarket_backend.exe.recipe
build_qml/supermarket_tests.dir/Debug/: supermarket_tests.exe.recipe
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/components/: Dashboard.tsx  Layout.tsx  Login.tsx  POS.tsx  ProductsList.tsx
frontend/src/lib/: api.ts
include/backend/api/: server.hpp
include/backend/business_logic/: alert_system.hpp  barcode_generator.hpp  checkout_service.hpp  financial_service.hpp  inventory_service.hpp  product_service.hpp
include/backend/concurrency/: async_task_scheduler.hpp
include/backend/core/: observer.hpp
include/backend/dal/: dal_category.hpp  dal_expense.hpp  dal_product.hpp  dal_supplier.hpp  dal_transaction.hpp  database.hpp  idal_product.hpp
include/backend/hal/: printer_interface.hpp  scanner_listener.hpp
include/backend/middleware/: jwt_authenticator.hpp  request_logger.hpp
include/backend/models/: category.hpp  expense.hpp  (+3 more)
include/utils/: json_utils.hpp
src/: main.cpp
tests/: CMakeLists.txt  test_dal.cpp  test_main.cpp  test_models.cpp  test_observer.cpp  test_services.cpp
(+88 files in other folders)
